--- a/t/materials/Copper/cu.mustache
+++ b/t/materials/Copper/cu.mustache
@@ -24,40 +24,29 @@
 
  *  Cu K edge energy = 8979 eV
  EDGE      K
- S02       1.0
+ S02       {{s02}}
 
  *         pot    xsph  fms   paths genfmt ff2chi
  CONTROL   1      1     1     1     1      1
- PRINT     1      0     0     0     0      0
+ PRINT     1      0     0     0     0      3
 
-               *** ixc=0 means to use Hedin-Lundqvist
- *         ixc  [ Vr  Vi ]
+ *         ixc  [ Vr  Vi ]     *** ixc=0 means to use Hedin-Lundqvist
  EXCHANGE  0
+                                           *** Radius for self-consistent pots (2 shells is a good choice)
+ *         r_scf  [ l_scf   n_scf   ca ]   *** l_scf = 0 for a solid, 1 for a molecule
+ SCF       {{scf}}
 
-               *** Radius of small cluster for self-consistency calculation
-               *** A sphere including 2 shells is a good choice
-               *** l_scf = 0 for a solid, 1 for a molecule
- *         r_scf  [ l_scf   n_scf   ca ]
- * SCF       5.0
-
-               *** Upper limit of XANES calculation.
-               *** This *must* be uncommented to make Feff calculate full
-               *** multiple scattering rather than a path expansion
- *         kmax   [ delta_k  delta_e ]
+ *         kmax   [ delta_k  delta_e ]     *** Upper limit of XANES calculation.
  * XANES     4.0
 
-               *** Radius of cluster for Full Multiple Scattering calculation
-               *** l_fms = 0 for a solid, 1 for a molecule
- *         r_fms     l_fms
+ *         r_fms     l_fms      *** Radius for Full Mult. Scatt. l_fms = 0 for a solid, 1 for a molecule
  * FMS      14.33531  0
 
-               *** Energy grid over which to calculate
-               *** DOS functions
- *         emin  emax   eimag
+ *         emin  emax   eimag   *** Energy grid over which to calculate DOS functions
  * LDOS      -30   20     0.1
 
                *** for EXAFS: RPATH 5.0 and uncomment the EXAFS card
- RPATH     5.0
+ RPATH     {{rpath}}
  EXAFS     20
 
  POTENTIALS
