--- a/t/materials/UO2/UO2.mustache
+++ b/t/materials/UO2/UO2.mustache
@@ -41,7 +41,7 @@
  EXCHANGE  0
                                            *** Radius for self-consistent pots (2 shells is a good choice)
  *         r_scf  [ l_scf   n_scf   ca ]   *** l_scf = 0 for a solid, 1 for a molecule
- SCF       {{scf}}
+ {{doscf}}SCF       {{scf}}
 
  *         kmax   [ delta_k  delta_e ]     *** Upper limit of XANES calculation.
  * XANES     4.0
