--- a/t/materials/bromoadamantane/bromoadamantane.mustache
+++ b/t/materials/bromoadamantane/bromoadamantane.mustache
@@ -29,36 +29,37 @@
  EXAFS     20
 
  POTENTIALS
- *    ipot   Z  element
-       0    35  Br      2    2     1
-       1     6  C       1    1    10
-       2     1  H       1    1    15
+ *   ipot   Z  element        l_scmt  l_fms   stoichiometry
+     0     35     Br           2       2       1
+     1      6     C            1       1       10
+     2      1     H            1       1       15
 
+     
  ATOMS
- *   x          y          z      ipot
-    3.1692    0.0002    0.0002 0
-    1.2171    0.0000    0.0002 1
-   -0.8314    1.4000    0.4043 1
-   -0.8310   -0.3499   -1.4146 1
-   -0.8312   -1.0502    1.0102 1
-    0.7083    1.3943    0.4027 1
-    0.7089   -0.3484   -1.4087 1
-    0.7086   -1.0458    1.0061 1
-   -1.3394    1.0438   -1.0042 1
-   -1.3397    0.3477    1.4059 1
-   -1.3393   -1.3916   -0.4020 1
-   -1.1980    2.3919    0.6908 2
-   -1.1974   -0.5977   -2.4170 2
-   -1.1978   -1.7943    1.7261 2
-    1.0795    2.1592   -0.2919 2
-    1.0796    1.6712    1.3981 2
-    1.0802   -1.3324   -1.7237 2
-    1.0801    0.3753   -2.1461 2
-    1.0797   -0.8267    2.0159 2
-    1.0799   -2.0463    0.7481 2
-   -2.4360    1.0619   -1.0220 2
-   -0.9967    1.7948   -1.7266 2
-   -0.9973    0.5978    2.4175 2
-   -2.4364    0.3536    1.4302 2
-   -2.4360   -1.4159   -0.4092 2
-   -0.9967   -2.3927   -0.6910 2
+ *   x          y          z     ipot tag           distance
+    3.16920    0.00020    0.00020  0  Br
+    1.21710    0.00000    0.00020  1  C
+   -0.83140    1.40000    0.40430  1  C
+   -0.83100   -0.34990   -1.41460  1  C
+   -0.83120   -1.05020    1.01020  1  C
+    0.70830    1.39430    0.40270  1  C
+    0.70890   -0.34840   -1.40870  1  C
+    0.70860   -1.04580    1.00610  1  C
+   -1.33940    1.04380   -1.00420  1  C
+   -1.33970    0.34770    1.40590  1  C
+   -1.33930   -1.39160   -0.40200  1  C
+   -1.19800    2.39190    0.69080  2  H
+   -1.19740   -0.59770   -2.41700  2  H
+   -1.19780   -1.79430    1.72610  2  H
+    1.07950    2.15920   -0.29190  2  H
+    1.07960    1.67120    1.39810  2  H
+    1.08020   -1.33240   -1.72370  2  H
+    1.08010    0.37530   -2.14610  2  H
+    1.07970   -0.82670    2.01590  2  H
+    1.07990   -2.04630    0.74810  2  H
+   -2.43600    1.06190   -1.02200  2  H
+   -0.99670    1.79480   -1.72660  2  H
+   -0.99730    0.59780    2.41750  2  H
+   -2.43640    0.35360    1.43020  2  H
+   -2.43600   -1.41590   -0.40920  2  H
+   -0.99670   -2.39270   -0.69100  2  H
